# address-validator

./: .env.test  .gitignore  .pre-commit-config.yaml  .socraticodecontextartifacts.json  AGENTS.md  PLAYBOOKS.md  README.md  address-validator.service  alembic.ini  audit-archive.service  audit-archive.timer  auth.py  docker-prune.service  docker-prune.timer  libpostal.service  logging_filter.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.claude/: settings.json
.claude/hooks/: socraticode-reminder.sh
.claude/skills/: train-model
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_index_qp_canonical_key.py  003_text_to_timestamptz.py  004_audit_log.py  005_audit_daily_stats.py  006_cache_table_cleanup.py  007_raw_input_pattern_key.py  008_model_training_candidates.py  009_audit_parse_type.py  010_nullable_query_pattern_canonical_key.py  011_validated_addresses_status_constraint.py  012_candidate_raw_address_hash.py  013_training_batches.py  014_drop_assigned_status.py
docs/: ARCHITECTURE.md  DEPENDENCY-POLICY.md  DEPLOYMENT.md  LOGGING.md  SENSITIVE-AREAS.md  SKILLS.md  STYLE.md  VALIDATION-PROVIDERS.md  address-validation-research.md  usps-pub28.md
docs/plans/: 2026-03-08-warnings-design.md  2026-03-09-google-maps-provider-design.md  2026-03-09-google-maps-provider.md  2026-03-10-validate-request-standardization-design.md  2026-03-17-provider-rate-limits-design.md  2026-03-19-multi-window-quota-guard-design.md  2026-03-19-postgres-migration-design.md  2026-03-19-quota-guard.md  2026-03-19-src-layout.md  2026-03-20-admin-dashboard-design.md  2026-03-20-dashboard-stat-redesign-design.md  2026-03-20-google-quota-integration-design.md  2026-03-20-style-guide-design.md  2026-03-20-style-guide.md  2026-03-21-audit-retention-design.md  2026-03-21-audit-retention.md  2026-03-21-sparklines-design.md  2026-03-22-audit-middleware-di-design.md  2026-03-22-explicit-engine-lifecycle-design.md  2026-03-22-factory-refactor-design.md  2026-03-22-factory-refactor.md  2026-03-22-health-db-check-design.md  2026-03-22-sqlalchemy-core-queries-design.md  (+33 more)
infra/: address-validator.service  archive_audit.py  audit-archive.service  docker-prune-check.sh  docker-prune.service  libpostal.service
middleware/: request_id.py
routers/: parse.py  standardize.py  web.py
scripts/: archive_audit.py  backfill_audit_log.py  backfill_pattern_key.py  build-css.sh  docker-prune-check.sh  download-tailwind.sh  migrate_sqlite_to_postgres.py
services/: parser.py  standardizer.py
static/: index.html
tests/: conftest.py
training/: .gitignore
usps_data/: directionals.py  spec.py  states.py  suffixes.py  units.py
(+228 files in other folders)
